Added : Implement RabbitMQ in fundoo-notes
